Updation- Sample HTML and CSS Project

--- a/index.html
+++ b/index.html
@@ -42,14 +42,40 @@
     <hr>
 
     <div class="list">
-        <h3 class="lists">
+        <h3 class="lists head">
             Types of Lists.. <br>
             1)Ordered List and <br>
             2) Unordered Lists.
         </h3>
-        <ol>
-            <li></li>
+        <ol class="order">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Bootstrap</li>
+            <li>Jquery</li>
+            <li>AJAX</li>
+            <li>JSON</li>
         </ol>
+
+        <ul class="unorder">
+            <li>REACT JS</li>
+            <li>Angular JS</li>
+            <li>NODE JS</li>
+            <li>PHP</li>
+            <li>MYSQLI</li>
+            <li>CODEIGNITER 4</li>
+        </ul>
+    </div>
+    <hr>
+
+    <div class="img">
+        <h2><u>IMAGES</u></h2>
+        <img src="https://img.freepik.com/free-photo/breathtaking-shot-beautiful-stones-turquoise-water-lake-hills-background_181624-12847.jpg"
+            alt="Lake Side">
+        <br>
+        <img src="./assets/imgs/Nature1.jpg" alt="Nature1"><br>
+        <img src="./assets/imgs/Nature2.jfif" alt="Nature2"><br>
+        <img src="./assets/imgs/Nature3.webp" alt="Nature3"><br>
     </div>
 </body>
 
